--- a/src/recipe.yaml
+++ b/src/recipe.yaml
@@ -4,7 +4,7 @@ context:
   version: "13.4.2"
 
 package:
-  name: "mist"
+  name: "mog"
   version: 0.1.3.nightly
 
 source:
@@ -15,14 +15,15 @@ source:
 build:
   script:
     - mkdir -p ${PREFIX}/lib/mojo
-    - magic run mojo package mist
-    - cp mist.mojopkg ${PREFIX}/lib/mojo/mist.mojopkg
+    - magic run mojo package mog
+    - cp mog.mojopkg ${PREFIX}/lib/mojo/mog.mojopkg
 
 requirements:
   run:
-    - gojo >= 0.1.6.nightly
-    - hue >= 0.1.3.nightly
+    - gojo >= 0.1.7.nightly
     - max >= 24.6.0.dev2024091205
+    - weave >= 0.1.0.nightly
+    - mist >= 0.1.3.nightly
 
 tests:
   - script:
@@ -31,19 +32,19 @@ tests:
       # if I don't copy everything into a test dir, mojo test runs the tests in the .magic dir and fails :|
       - mkdir -p test
       - mv test_*.mojo test/
-      - mv mist.mojopkg test/
+      - mv mog.mojopkg test/
       - magic run mojo test test
 
     files:
       # Extra files to be copied to the test directory from the "work directory"
       source:
-        - mist.mojopkg
+        - mog.mojopkg
         - mojoproject.toml
         - test_*.mojo
 
 about:
-  homepage: https://github.com/thatstoasty/mist
+  homepage: https://github.com/thatstoasty/mog
   license: MIT
   license_file: LICENSE
-  summary: mist lets you safely use advanced styling options on the terminal. https://github.com/thatstoasty/mist
-  repository: https://github.com/thatstoasty/mist
+  summary: Style definitions for nice terminal layouts. Built with TUIs in mind. https://github.com/thatstoasty/mog
+  repository: https://github.com/thatstoasty/mog
