--- a/mojoproject.toml
+++ b/mojoproject.toml
@@ -10,7 +10,7 @@ version = "0.1.0.nightly"
 tests = "bash scripts/tests.sh"
 examples = "bash scripts/examples.sh"
 benchmarks = "bash scripts/benchmarks.sh"
-build = { cmd = "rattler-build build -r src -c https://conda.modular.com/max-nightly -c conda-forge -c https://repo.prefix.dev/mojo-community --skip-existing=all", env = {MODULAR_MOJO_NIGHTLY_IMPORT_PATH = "$CONDA_PREFIX/lib/mojo"} }
+build = { cmd = "rattler-build build -r src -c https://repo.prefix.dev/mojo-community -c https://conda.modular.com/max-nightly -c conda-forge --skip-existing=all", env = {MODULAR_MOJO_NIGHTLY_IMPORT_PATH = "$CONDA_PREFIX/lib/mojo"} }
 publish = { cmd = "bash scripts/publish.sh", env = { PREFIX_API_KEY = "$PREFIX_API_KEY" } }
 
 [dependencies]
