--- a/src/recipe.yaml
+++ b/src/recipe.yaml
@@ -31,7 +31,8 @@ tests:
       # returns with an error code, the test is considered failed.
       # if I don't copy everything into a test dir, mojo test runs the tests in the .magic dir and fails :|
       - mkdir -p test
-      - mv test_*.mojo test/
+      - mv unit/test_*.mojo test/
+      - mv integration/test_*.mojo test/
       - mv mog.mojopkg test/
       - magic run mojo test test
 
