--- a/mojoproject.toml
+++ b/mojoproject.toml
@@ -1,20 +1,21 @@
 [project]
 authors = ["Mikhail Tavarez <miktavarez@gmail.com>"]
-channels = ["https://repo.prefix.dev/mojo-community", "conda-forge", "https://conda.modular.com/max-nightly"]
-description = "Style definitions for nice terminal layouts. Built with TUIs in mind.."
+channels = ["https://repo.prefix.dev/mojo-community", "conda-forge", "https://conda.modular.com/max"]
+description = "Style definitions for nice terminal layouts. Built with TUIs in mind."
 name = "mog"
 platforms = ["osx-arm64", "linux-64"]
-version = "0.1.4.nightly"
+version = "0.1.5"
 
 [tasks]
 tests = "bash scripts/tests.sh"
 examples = "bash scripts/examples.sh"
 benchmarks = "bash scripts/benchmarks.sh"
-build = { cmd = "rattler-build build -r src -c https://repo.prefix.dev/mojo-community -c https://conda.modular.com/max-nightly -c conda-forge --skip-existing=all", env = {MODULAR_MOJO_NIGHTLY_IMPORT_PATH = "$CONDA_PREFIX/lib/mojo"} }
+build = { cmd = "rattler-build build -r src -c https://repo.prefix.dev/mojo-community -c https://conda.modular.com/max -c conda-forge --skip-existing=all", env = {MODULAR_MOJO_NIGHTLY_IMPORT_PATH = "$CONDA_PREFIX/lib/mojo"} }
 publish = { cmd = "bash scripts/publish.sh", env = { PREFIX_API_KEY = "$PREFIX_API_KEY" } }
 
 [dependencies]
-max = ">=24.6.0.dev2024091205,<25"
-gojo = ">=0.1.7.nightly"
-weave = ">=0.1.0.nightly,<0.2"
-mist = ">=0.1.3.nightly,<0.2"
+max = ">=24.5.0,<25"
+gojo = ">=0.1.9,<0.2"
+weave = ">=0.1.1,<0.2"
+mist = ">=0.1.4,<0.2"
+
