--- a/src/recipe.yaml
+++ b/src/recipe.yaml
@@ -5,7 +5,7 @@ context:
 
 package:
   name: "mog"
-  version: 0.1.4.nightly
+  version: 0.1.5
 
 source:
   - path: .
@@ -20,10 +20,10 @@ build:
 
 requirements:
   run:
-    - gojo >= 0.1.7.nightly
-    - max >= 24.6.0.dev2024091205
-    - weave >= 0.1.0.nightly
-    - mist >= 0.1.3.nightly
+    - gojo >= 0.1.9,<0.2
+    - max >= 24.5.0,<25
+    - weave >= 0.1.1,<0.2
+    - mist >= 0.1.4,<0.2
 
 tests:
   - script:
