--- a/mojoproject.toml
+++ b/mojoproject.toml
@@ -5,6 +5,9 @@ description = "Style definitions for nice terminal layouts. Built with TUIs in m
 name = "mog"
 platforms = ["osx-arm64", "linux-64"]
 version = "0.1.6"
+license = "MIT"
+license-file = "LICENSE"
+homepage = "https://github.com/thatstoasty/weave"
 
 [tasks]
 tests = "bash scripts/tests.sh"
@@ -15,7 +18,17 @@ publish = { cmd = "bash scripts/publish.sh", env = { PREFIX_API_KEY = "$PREFIX_A
 
 [dependencies]
 max = ">=24.5.0,<25"
-gojo = ">=0.1.9,<0.2"
-weave = ">=0.1.1,<0.2"
-mist = ">=0.1.6,<0.2"
+# gojo = ">=0.1.9,<0.2"
+# weave = ">=0.1.1,<0.2"
+# mist = ">=0.1.6,<0.2"
 
+[feature.nightly]
+channels = ["https://repo.prefix.dev/mojo-community-nightly", "conda-forge", "https://conda.modular.com/max-nightly"]
+
+[feature.nightly.dependencies]
+max = ">=24.6.0.dev2024120105"
+weave = ">=0.1.3.nightly2"
+mist = ">=0.1.9.nightly1"
+
+[environments]
+nightly = ["nightly"]
