--- a/mojoproject.toml
+++ b/mojoproject.toml
@@ -4,7 +4,7 @@ channels = ["https://repo.prefix.dev/mojo-community", "conda-forge", "https://co
 description = "Style definitions for nice terminal layouts. Built with TUIs in mind."
 name = "mog"
 platforms = ["osx-arm64", "linux-64"]
-version = "0.1.6"
+version = "0.1.7.nightly1"
 license = "MIT"
 license-file = "LICENSE"
 homepage = "https://github.com/thatstoasty/weave"
