--- a/mojoproject.toml
+++ b/mojoproject.toml
@@ -7,7 +7,7 @@ platforms = ["osx-arm64", "linux-64"]
 version = "0.1.7.nightly1"
 license = "MIT"
 license-file = "LICENSE"
-homepage = "https://github.com/thatstoasty/weave"
+homepage = "https://github.com/thatstoasty/mog"
 
 [tasks]
 tests = "python scripts/util.py run tests"
