--- a/mojoproject.toml
+++ b/mojoproject.toml
@@ -4,7 +4,7 @@ channels = ["https://repo.prefix.dev/mojo-community", "conda-forge", "https://co
 description = "Style definitions for nice terminal layouts. Built with TUIs in mind."
 name = "mog"
 platforms = ["osx-arm64", "linux-64"]
-version = "0.1.7.nightly2"
+version = "0.1.7.nightly3"
 license = "MIT"
 license-file = "LICENSE"
 homepage = "https://github.com/thatstoasty/mog"
@@ -19,7 +19,7 @@ publish = { cmd = "python scripts/util.py publish", env = { PREFIX_API_KEY = "$P
 bp = { depends_on=["build", "publish"] }
 
 [dependencies]
-max = ">=24.5.0,<25"
+max = ">=24.5.0"
 # gojo = ">=0.1.9,<0.2"
 # weave = ">=0.1.1,<0.2"
 # mist = ">=0.1.6,<0.2"
@@ -28,9 +28,9 @@ max = ">=24.5.0,<25"
 channels = ["https://repo.prefix.dev/mojo-community-nightly", "conda-forge", "https://conda.modular.com/max-nightly"]
 
 [feature.nightly.dependencies]
-max = ">=24.6.0.dev2024121016"
+max = ">=25.1.0.dev2024121305"
 weave = ">=0.1.3.nightly5"
 mist = ">=0.1.9.nightly3"
 
 [environments]
-nightly = ["nightly"]
+nightly = {features = ["nightly"]}
