--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
       matrix:
         include:
           - { target: linux-64, os: ubuntu-latest }
-          # - { target: osx-arm64, os: macos-14 }
+          - { target: osx-arm64, os: macos-14 }
       fail-fast: false
 
     runs-on: ${{ matrix.os }}
@@ -48,5 +48,6 @@ jobs:
           export PATH="$PATH:$(pwd)"
 
           # Build and push
+          printenv
           magic run build
           magic run publish
