--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,6 +34,7 @@ jobs:
       - name: Run tests
         run: |
           source $HOME/.bash_profile
+          printenv
           magic run tests
           magic run benchmarks
           magic run examples
