--- a/mojoproject.toml
+++ b/mojoproject.toml
@@ -4,18 +4,34 @@ channels = ["https://repo.prefix.dev/mojo-community", "conda-forge", "https://co
 description = "Style definitions for nice terminal layouts. Built with TUIs in mind."
 name = "mog"
 platforms = ["osx-arm64", "linux-64"]
-version = "0.1.6"
+version = "0.1.7"
+license = "MIT"
+license-file = "LICENSE"
+homepage = "https://github.com/thatstoasty/mog"
+repository = "https://github.com/thatstoasty/mog"
+
 
 [tasks]
-tests = "bash scripts/tests.sh"
-examples = "bash scripts/examples.sh"
-benchmarks = "bash scripts/benchmarks.sh"
-build = { cmd = "rattler-build build -r src -c https://repo.prefix.dev/mojo-community -c https://conda.modular.com/max -c conda-forge --skip-existing=all", env = {MODULAR_MOJO_NIGHTLY_IMPORT_PATH = "$CONDA_PREFIX/lib/mojo"} }
-publish = { cmd = "bash scripts/publish.sh", env = { PREFIX_API_KEY = "$PREFIX_API_KEY" } }
+tests = "python scripts/util.py run tests"
+benchmarks = "python scripts/util.py run benchmarks"
+examples = "python scripts/util.py run examples"
+template = "python scripts/util.py templater"
+build = { cmd = "python scripts/util.py build", env = { MODULAR_MOJO_IMPORT_PATH = "$CONDA_PREFIX/lib/mojo" } }
+publish = { cmd = "python scripts/util.py publish", env = { PREFIX_API_KEY = "$PREFIX_API_KEY" } }
+bp = { depends_on=["build", "publish"] }
 
 [dependencies]
-max = ">=24.5.0,<25"
-gojo = ">=0.1.9,<0.2"
-weave = ">=0.1.1,<0.2"
-mist = ">=0.1.6,<0.2"
+max = ">=24.6.0"
+weave = ">=0.1.3"
+mist = ">=0.1.10"
 
+# [feature.nightly]
+# channels = ["https://repo.prefix.dev/mojo-community-nightly", "conda-forge", "https://conda.modular.com/max-nightly"]
+
+# [feature.nightly.dependencies]
+# max = ">=25.1.0.dev2024121305"
+# weave = ">=0.1.3.nightly5"
+# mist = ">=0.1.9.nightly3"
+
+# [environments]
+# nightly = {features = ["nightly"]}
