--- a/mojoproject.toml
+++ b/mojoproject.toml
@@ -4,7 +4,7 @@ channels = ["https://repo.prefix.dev/mojo-community", "conda-forge", "https://co
 description = "Style definitions for nice terminal layouts. Built with TUIs in mind."
 name = "mog"
 platforms = ["osx-arm64", "linux-64"]
-version = "0.1.7"
+version = "0.1.9"
 license = "MIT"
 license-file = "LICENSE"
 homepage = "https://github.com/thatstoasty/mog"
@@ -18,20 +18,10 @@ examples = "python scripts/util.py run examples"
 template = "python scripts/util.py templater"
 build = { cmd = "python scripts/util.py build", env = { MODULAR_MOJO_IMPORT_PATH = "$CONDA_PREFIX/lib/mojo" } }
 publish = { cmd = "python scripts/util.py publish", env = { PREFIX_API_KEY = "$PREFIX_API_KEY" } }
-bp = { depends_on=["build", "publish"] }
+bp = { depends-on=["build", "publish"] }
 
 [dependencies]
-max = ">=24.6.0"
-weave = ">=0.1.3"
-mist = ">=0.1.10"
+max = "==25.1.0"
+weave = ">=0.1.4"
+mist = ">=0.1.12"
 
-# [feature.nightly]
-# channels = ["https://repo.prefix.dev/mojo-community-nightly", "conda-forge", "https://conda.modular.com/max-nightly"]
-
-# [feature.nightly.dependencies]
-# max = ">=25.1.0.dev2024121305"
-# weave = ">=0.1.3.nightly5"
-# mist = ">=0.1.9.nightly3"
-
-# [environments]
-# nightly = {features = ["nightly"]}
