--- a/mojoproject.toml
+++ b/mojoproject.toml
@@ -4,7 +4,7 @@ channels = ["https://repo.prefix.dev/mojo-community", "conda-forge", "https://co
 description = "Style definitions for nice terminal layouts. Built with TUIs in mind."
 name = "mog"
 platforms = ["osx-arm64", "linux-64"]
-version = "25.1.0"
+version = "25.1.1"
 license = "MIT"
 license-file = "LICENSE"
 homepage = "https://github.com/thatstoasty/mog"
@@ -21,7 +21,6 @@ publish = { cmd = "python scripts/util.py publish", env = { PREFIX_API_KEY = "$P
 bp = { depends-on=["build", "publish"] }
 
 [dependencies]
-max = "==25.1.0"
-weave = ">=0.1.4"
-mist = ">=25.1.0"
-
+max = ">=25.1.0,<25.2.0"
+weave = ">=25.1.0,<25.2.0"
+mist = ">=25.1.1,<25.2.0"
