--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         include:
           - { target: linux-64, os: ubuntu-latest }
-          - { target: osx-arm64, os: macos-latest }
+          # - { target: osx-arm64, os: macos-latest }
           - { target: linux-aarch64, os: ubuntu-24.04-arm }
       fail-fast: false
 
