fixed up pokemon example

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,13 +28,9 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Install magic
-        run: |
-          if [[ ${{ matrix.target }} == "linux-aarch64" ]]; then
-            bash scripts/install_magic_aarch64.sh
-          else
-            curl -ssL https://magic.modular.com | bash
-          fi
+      - uses: prefix-dev/setup-pixi@v0.8.10
+        with:
+          pixi-version: v0.47.0
 
       - name: Build package for target platform
         env:
@@ -43,19 +39,7 @@ jobs:
           CONDA_BLD_PATH: ${{ runner.workspace }}/.rattler
 
         run: |
-          source $HOME/.bash_profile
-
-          # Temporary method to fetch the rattler binary.
-          RATTLER_BINARY="rattler-build-aarch64-apple-darwin"
-          if [[ $TARGET_PLATFORM == "linux-64" ]]; then
-            RATTLER_BINARY="rattler-build-x86_64-unknown-linux-musl"
-          elif [[ $TARGET_PLATFORM == "linux-aarch64" ]]; then
-            RATTLER_BINARY="rattler-build-aarch64-unknown-linux-musl"
-          fi
-          curl -SL --progress-bar https://github.com/prefix-dev/rattler-build/releases/latest/download/${RATTLER_BINARY} -o rattler-build
-          chmod +x rattler-build
-          export PATH="$PATH:$(pwd)"
-
-          # Build and push
-          magic run build
-          magic run publish
+          # Build and publish
+          pixi run -e util build
+          pixi auth login prefix.dev --token "$PREFIX_API_KEY"
+          pixi run -e util publish mojo-community
