--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,7 +9,7 @@ repos:
     hooks:
       - id: mojo-format
         name: mojo-format
-        entry: magic run mojo format -l 120
+        entry: pixi run mojo format -l 120
         language: system
         files: '\.(mojo|🔥)$'
         stages: [commit]
