--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         include:
           - { target: linux-64, os: ubuntu-latest }
-          # - { target: osx-arm64, os: macos-latest }
+          - { target: osx-arm64, os: macos-latest }
           - { target: linux-aarch64, os: ubuntu-24.04-arm }
       fail-fast: false
 
@@ -29,17 +29,10 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Install magic
-        run: |
-          if [[ ${{ matrix.target }} == "linux-aarch64" ]]; then
-            bash scripts/install_magic_aarch64.sh
-          else
-            curl -ssL https://magic.modular.com | bash
-          fi
+      - uses: prefix-dev/setup-pixi@v0.8.10
+        with:
+          pixi-version: v0.47.0
 
       - name: Run tests
-        run: |
-          source $HOME/.bash_profile
-          magic run tests
-          magic run benchmarks
-          magic run examples
+        shell: bash
+        run: pixi run -e util tests
