--- a/pixi.toml
+++ b/pixi.toml
@@ -10,28 +10,51 @@ homepage = "https://github.com/thatstoasty/mog"
 repository = "https://github.com/thatstoasty/mog"
 preview = ["pixi-build"]
 
-[tasks]
-tests = "python scripts/util.py run-tests"
-benchmarks = "python scripts/util.py run-benchmarks"
-examples = "python scripts/util.py run-examples"
-template = "python scripts/util.py generate-recipe"
-build = { cmd = "python scripts/util.py build-conda-package" }
-publish = { cmd = "python scripts/util.py publish", env = { PREFIX_API_KEY = "$PREFIX_API_KEY" } }
+[feature.util.tasks]
+tests = "mojo test"
+benchmarks = "python3 scripts/util.py run-benchmarks"
+examples = "python3 scripts/util.py run-examples"
+template = "python3 scripts/util.py generate-recipe"
 
-[dependencies]
-max = ">=25.4.0,<25.5.0"
-mist = ">=25.4.2,<25.5.0"
+# Linting and Formatting
+lint_docs = "python3 scripts/check-docstrings.py"
+mojo_format = "mojo format mog --line-length 120"
+sort_imports = "isort **/*.mojo -m 3 --line-length 120 --lines-after-imports 2 --trailing-comma"
+format = [{ task = "mojo_format" }, { task = "sort_imports" }]
+
+# Build and publish
+build = { cmd = "pixi build -o ." }
+publish = { cmd = "find . -name 'mog-*.conda' | xargs pixi upload https://prefix.dev/api/v1/upload/mojo-community" }
+build_and_publish = [{ task = "build" }, { task = "publish" }]
 
 [package]
 name = "mog"
-version = "25.4.0"
+version = "25.5.0"
 
 [package.build]
-backend = { name = "pixi-build-rattler-build", version = "*" }
+backend = { name = "pixi-build-mojo", version = "*" }
+
+[dependencies]
+mojo = ">=25.5.0,<25.6.0"
+mojo-compiler = ">=25.5.0,<25.6.0"
+mist = ">=25.5.0,<25.6.0"
+
+[package.host-dependencies]
+mojo = ">=25.5.0,<25.6.0"
+mojo-compiler = ">=25.5.0,<25.6.0"
+mist = ">=25.5.0,<25.6.0"
+
+[package.build-dependencies]
+mojo = ">=25.5.0,<25.6.0"
+mojo-compiler = ">=25.5.0,<25.6.0"
+mist = ">=25.5.0,<25.6.0"
+
+[package.run-dependencies]
+mojo = ">=25.5.0,<25.6.0"
 
 [feature.util.dependencies]
 typer = ">=0.16.0,<0.17"
-pyyaml = ">=6.0.2,<7"
+isort = ">=6.0.1,<7"
 
 [environments]
 default = { solve-group = "default" }
