--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,4 +35,7 @@ jobs:
 
       - name: Run tests
         shell: bash
-        run: pixi run tests
+        run: |
+          pixi run tests
+          pixi run examples
+          pixi run benchmarks
