--- a/pixi.toml
+++ b/pixi.toml
@@ -29,7 +29,7 @@ build_and_publish = [{ task = "build" }, { task = "publish" }]
 
 [package]
 name = "mog"
-version = "25.5.0"
+version = "25.5.1"
 
 [package.build]
 backend = { name = "pixi-build-mojo", version = "*" }
@@ -51,6 +51,7 @@ mist = ">=25.5.0,<25.6.0"
 
 [package.run-dependencies]
 mojo = ">=25.5.0,<25.6.0"
+mist = ">=25.5.0,<25.6.0"
 
 [feature.util.dependencies]
 typer = ">=0.16.0,<0.17"
