--- a/pixi.toml
+++ b/pixi.toml
@@ -2,7 +2,7 @@
 description = "Style definitions for nice terminal layouts."
 authors = ["Mikhail Tavarez <miktavarez@gmail.com>"]
 channels = ["https://repo.prefix.dev/mojo-community", "conda-forge", "https://conda.modular.com/max", "https://prefix.dev/pixi-build-backends"]
-platforms = ["osx-arm64", "linux-64", "linux-aarch64"]
+platforms = ["osx-arm64", "linux-64"]
 license = "MIT"
 license-file = "LICENSE"
 readme = "README.md"
