--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,6 +35,8 @@ jobs:
 
       - name: Run tests
         shell: bash
+        env:
+          CLICOLOR_FORCE: 1
         run: |
           pixi run tests
           pixi run examples
