--- a/pixi.toml
+++ b/pixi.toml
@@ -39,6 +39,7 @@ mist = ">=26.1.0,<26.2.0"
 
 [package.build-dependencies]
 mojo-compiler = ">=0.26.1.0,<0.26.2.0"
+mist = ">=26.1.0,<26.2.0"
 
 [package.run-dependencies]
 mojo = ">=0.26.1.0,<0.26.2.0"
