--- a/pixi.toml
+++ b/pixi.toml
@@ -41,6 +41,10 @@ mist = ">=26.1.0,<26.2.0"
 mojo-compiler = ">=0.26.1.0,<0.26.2.0"
 mist = ">=26.1.0,<26.2.0"
 
+[package.host-dependencies]
+mojo = ">=0.26.1.0,<0.26.2.0"
+mist = ">=26.1.0,<26.2.0"
+
 [package.run-dependencies]
 mojo = ">=0.26.1.0,<0.26.2.0"
 mist = ">=26.1.0,<26.2.0"
